Tema_5/Actividad-4/experimento_parsers/src/antlr_csharp/generated/DockerComposeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from experimento_parsers/grammars/DockerCompose.g4 by ANTLR 4.9.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.3")]
[System.CLSCompliant(false)]
public partial class DockerComposeParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		VERSION_KEY=1, SERVICES_KEY=2, NETWORKS_KEY=3, IMAGE_KEY=4, DRIVER_KEY=5, 
		IPAM_KEY=6, CONFIG_KEY=7, SUBNET_KEY=8, DASH=9, COLON=10, INDENT8=11, 
		INDENT6=12, INDENT4=13, INDENT2=14, QUOTED_STRING=15, IP_SUBNET=16, ID=17, 
		NEWLINE=18, WS=19;
	public const int
		RULE_dockerComposeFile = 0, RULE_versionDecl = 1, RULE_servicesDecl = 2, 
		RULE_serviceEntry = 3, RULE_serviceBody = 4, RULE_serviceAttr = 5, RULE_imageVal = 6, 
		RULE_networkRef = 7, RULE_networksDecl = 8, RULE_networkEntry = 9, RULE_networkBody = 10, 
		RULE_networkAttr = 11, RULE_ipamBody = 12, RULE_configBody = 13, RULE_emptyLine = 14;
	public static readonly string[] ruleNames = {
		"dockerComposeFile", "versionDecl", "servicesDecl", "serviceEntry", "serviceBody", 
		"serviceAttr", "imageVal", "networkRef", "networksDecl", "networkEntry", 
		"networkBody", "networkAttr", "ipamBody", "configBody", "emptyLine"
	};

	private static readonly string[] _LiteralNames = {
		null, "'version:'", "'services:'", "'networks:'", "'image:'", "'driver:'", 
		"'ipam:'", "'config:'", "'subnet:'", "'-'", "':'", "'        '", "'      '", 
		"'    '", "'  '"
	};
	private static readonly string[] _SymbolicNames = {
		null, "VERSION_KEY", "SERVICES_KEY", "NETWORKS_KEY", "IMAGE_KEY", "DRIVER_KEY", 
		"IPAM_KEY", "CONFIG_KEY", "SUBNET_KEY", "DASH", "COLON", "INDENT8", "INDENT6", 
		"INDENT4", "INDENT2", "QUOTED_STRING", "IP_SUBNET", "ID", "NEWLINE", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DockerCompose.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DockerComposeParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DockerComposeParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DockerComposeParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DockerComposeFileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(DockerComposeParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VersionDeclContext[] versionDecl() {
			return GetRuleContexts<VersionDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VersionDeclContext versionDecl(int i) {
			return GetRuleContext<VersionDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ServicesDeclContext[] servicesDecl() {
			return GetRuleContexts<ServicesDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ServicesDeclContext servicesDecl(int i) {
			return GetRuleContext<ServicesDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NetworksDeclContext[] networksDecl() {
			return GetRuleContexts<NetworksDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NetworksDeclContext networksDecl(int i) {
			return GetRuleContext<NetworksDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EmptyLineContext[] emptyLine() {
			return GetRuleContexts<EmptyLineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EmptyLineContext emptyLine(int i) {
			return GetRuleContext<EmptyLineContext>(i);
		}
		public DockerComposeFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dockerComposeFile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.EnterDockerComposeFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.ExitDockerComposeFile(this);
		}
	}

	[RuleVersion(0)]
	public DockerComposeFileContext dockerComposeFile() {
		DockerComposeFileContext _localctx = new DockerComposeFileContext(Context, State);
		EnterRule(_localctx, 0, RULE_dockerComposeFile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VERSION_KEY) | (1L << SERVICES_KEY) | (1L << NETWORKS_KEY) | (1L << NEWLINE))) != 0)) {
				{
				State = 34;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case VERSION_KEY:
					{
					State = 30;
					versionDecl();
					}
					break;
				case SERVICES_KEY:
					{
					State = 31;
					servicesDecl();
					}
					break;
				case NETWORKS_KEY:
					{
					State = 32;
					networksDecl();
					}
					break;
				case NEWLINE:
					{
					State = 33;
					emptyLine();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 38;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 39;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VersionDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VERSION_KEY() { return GetToken(DockerComposeParser.VERSION_KEY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QUOTED_STRING() { return GetToken(DockerComposeParser.QUOTED_STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(DockerComposeParser.NEWLINE, 0); }
		public VersionDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_versionDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.EnterVersionDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.ExitVersionDecl(this);
		}
	}

	[RuleVersion(0)]
	public VersionDeclContext versionDecl() {
		VersionDeclContext _localctx = new VersionDeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_versionDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 41;
			Match(VERSION_KEY);
			State = 42;
			Match(QUOTED_STRING);
			State = 43;
			Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ServicesDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SERVICES_KEY() { return GetToken(DockerComposeParser.SERVICES_KEY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(DockerComposeParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ServiceEntryContext[] serviceEntry() {
			return GetRuleContexts<ServiceEntryContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ServiceEntryContext serviceEntry(int i) {
			return GetRuleContext<ServiceEntryContext>(i);
		}
		public ServicesDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_servicesDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.EnterServicesDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.ExitServicesDecl(this);
		}
	}

	[RuleVersion(0)]
	public ServicesDeclContext servicesDecl() {
		ServicesDeclContext _localctx = new ServicesDeclContext(Context, State);
		EnterRule(_localctx, 4, RULE_servicesDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			Match(SERVICES_KEY);
			State = 46;
			Match(NEWLINE);
			State = 48;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 47;
				serviceEntry();
				}
				}
				State = 50;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==INDENT2 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ServiceEntryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INDENT2() { return GetToken(DockerComposeParser.INDENT2, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(DockerComposeParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(DockerComposeParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(DockerComposeParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ServiceBodyContext serviceBody() {
			return GetRuleContext<ServiceBodyContext>(0);
		}
		public ServiceEntryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_serviceEntry; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.EnterServiceEntry(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.ExitServiceEntry(this);
		}
	}

	[RuleVersion(0)]
	public ServiceEntryContext serviceEntry() {
		ServiceEntryContext _localctx = new ServiceEntryContext(Context, State);
		EnterRule(_localctx, 6, RULE_serviceEntry);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			Match(INDENT2);
			State = 53;
			Match(ID);
			State = 54;
			Match(COLON);
			State = 55;
			Match(NEWLINE);
			State = 56;
			serviceBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ServiceBodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ServiceAttrContext[] serviceAttr() {
			return GetRuleContexts<ServiceAttrContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ServiceAttrContext serviceAttr(int i) {
			return GetRuleContext<ServiceAttrContext>(i);
		}
		public ServiceBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_serviceBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.EnterServiceBody(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.ExitServiceBody(this);
		}
	}

	[RuleVersion(0)]
	public ServiceBodyContext serviceBody() {
		ServiceBodyContext _localctx = new ServiceBodyContext(Context, State);
		EnterRule(_localctx, 8, RULE_serviceBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 58;
				serviceAttr();
				}
				}
				State = 61;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==INDENT4 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ServiceAttrContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INDENT4() { return GetToken(DockerComposeParser.INDENT4, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IMAGE_KEY() { return GetToken(DockerComposeParser.IMAGE_KEY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ImageValContext imageVal() {
			return GetRuleContext<ImageValContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(DockerComposeParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NETWORKS_KEY() { return GetToken(DockerComposeParser.NETWORKS_KEY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NetworkRefContext[] networkRef() {
			return GetRuleContexts<NetworkRefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NetworkRefContext networkRef(int i) {
			return GetRuleContext<NetworkRefContext>(i);
		}
		public ServiceAttrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_serviceAttr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.EnterServiceAttr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.ExitServiceAttr(this);
		}
	}

	[RuleVersion(0)]
	public ServiceAttrContext serviceAttr() {
		ServiceAttrContext _localctx = new ServiceAttrContext(Context, State);
		EnterRule(_localctx, 10, RULE_serviceAttr);
		int _la;
		try {
			State = 76;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 63;
				Match(INDENT4);
				State = 64;
				Match(IMAGE_KEY);
				State = 65;
				imageVal();
				State = 66;
				Match(NEWLINE);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 68;
				Match(INDENT4);
				State = 69;
				Match(NETWORKS_KEY);
				State = 70;
				Match(NEWLINE);
				State = 72;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 71;
					networkRef();
					}
					}
					State = 74;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==INDENT6 );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImageValContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(DockerComposeParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(DockerComposeParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(DockerComposeParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QUOTED_STRING() { return GetToken(DockerComposeParser.QUOTED_STRING, 0); }
		public ImageValContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_imageVal; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.EnterImageVal(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.ExitImageVal(this);
		}
	}

	[RuleVersion(0)]
	public ImageValContext imageVal() {
		ImageValContext _localctx = new ImageValContext(Context, State);
		EnterRule(_localctx, 12, RULE_imageVal);
		int _la;
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 78;
				Match(ID);
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==COLON) {
					{
					State = 79;
					Match(COLON);
					State = 80;
					Match(ID);
					}
				}

				}
				break;
			case QUOTED_STRING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 83;
				Match(QUOTED_STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NetworkRefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INDENT6() { return GetToken(DockerComposeParser.INDENT6, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DASH() { return GetToken(DockerComposeParser.DASH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(DockerComposeParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(DockerComposeParser.NEWLINE, 0); }
		public NetworkRefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_networkRef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.EnterNetworkRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.ExitNetworkRef(this);
		}
	}

	[RuleVersion(0)]
	public NetworkRefContext networkRef() {
		NetworkRefContext _localctx = new NetworkRefContext(Context, State);
		EnterRule(_localctx, 14, RULE_networkRef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(INDENT6);
			State = 87;
			Match(DASH);
			State = 88;
			Match(ID);
			State = 89;
			Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NetworksDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NETWORKS_KEY() { return GetToken(DockerComposeParser.NETWORKS_KEY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(DockerComposeParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NetworkEntryContext[] networkEntry() {
			return GetRuleContexts<NetworkEntryContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NetworkEntryContext networkEntry(int i) {
			return GetRuleContext<NetworkEntryContext>(i);
		}
		public NetworksDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_networksDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.EnterNetworksDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.ExitNetworksDecl(this);
		}
	}

	[RuleVersion(0)]
	public NetworksDeclContext networksDecl() {
		NetworksDeclContext _localctx = new NetworksDeclContext(Context, State);
		EnterRule(_localctx, 16, RULE_networksDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			Match(NETWORKS_KEY);
			State = 92;
			Match(NEWLINE);
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 93;
				networkEntry();
				}
				}
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==INDENT2 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NetworkEntryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INDENT2() { return GetToken(DockerComposeParser.INDENT2, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(DockerComposeParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(DockerComposeParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(DockerComposeParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NetworkBodyContext networkBody() {
			return GetRuleContext<NetworkBodyContext>(0);
		}
		public NetworkEntryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_networkEntry; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.EnterNetworkEntry(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.ExitNetworkEntry(this);
		}
	}

	[RuleVersion(0)]
	public NetworkEntryContext networkEntry() {
		NetworkEntryContext _localctx = new NetworkEntryContext(Context, State);
		EnterRule(_localctx, 18, RULE_networkEntry);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			Match(INDENT2);
			State = 99;
			Match(ID);
			State = 100;
			Match(COLON);
			State = 101;
			Match(NEWLINE);
			State = 102;
			networkBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NetworkBodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NetworkAttrContext[] networkAttr() {
			return GetRuleContexts<NetworkAttrContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NetworkAttrContext networkAttr(int i) {
			return GetRuleContext<NetworkAttrContext>(i);
		}
		public NetworkBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_networkBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.EnterNetworkBody(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.ExitNetworkBody(this);
		}
	}

	[RuleVersion(0)]
	public NetworkBodyContext networkBody() {
		NetworkBodyContext _localctx = new NetworkBodyContext(Context, State);
		EnterRule(_localctx, 20, RULE_networkBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 104;
				networkAttr();
				}
				}
				State = 107;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==INDENT4 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NetworkAttrContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INDENT4() { return GetToken(DockerComposeParser.INDENT4, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DRIVER_KEY() { return GetToken(DockerComposeParser.DRIVER_KEY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(DockerComposeParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(DockerComposeParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IPAM_KEY() { return GetToken(DockerComposeParser.IPAM_KEY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IpamBodyContext ipamBody() {
			return GetRuleContext<IpamBodyContext>(0);
		}
		public NetworkAttrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_networkAttr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.EnterNetworkAttr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDockerComposeListener typedListener = listener as IDockerComposeListener;
			if (typedListener != null) typedListener.ExitNetworkAttr(this);
		}
	}
